# super-mimi-kart

./: .dockerignore  Cargo.toml  Dockerfile  build.rs
assets/: chorb.glb  chorb_nooutline.glb  chorb_red.glb  chorb_red_nooutline.glb
assets_src/: coin_indicator.aseprite  explosion.aseprite  pos_indicator.aseprite  pos_suffix.aseprite
client/: Cargo.toml
client/src/: game.rs  lib.rs  render.rs
client/src/game/: objects.rs
client/src/game/objects/: map.rs  player.rs
client/src/game/shaders/: mod.rs
client/src/game/shaders/unlit/: frag.glsl  mod.rs  vert.glsl
client/src/render/: cam.rs  mesh.rs  object.rs  shaders.rs  sprite.rs  texture.rs
client/src/render/shaders/unlit/: frag.glsl  mod.rs
client/src/render/sprite/: billboard.rs  sheet.rs
client/static/: index.html
common/: Cargo.toml
common/src/: lib.rs  map.rs  types.rs
common/src/map/: asset.rs  track.rs
editor/: Cargo.toml
editor/src/: asset_loader.rs  assets.rs  editor.rs  lib.rs
editor/src/editor/: left_panel.rs  map_io.rs  map_view.rs  properties_panel.rs
editor/src/editor/map_view/: selection.rs  selection_window.rs  tools.rs  view_settings.rs
editor/src/editor/map_view/selection/: coin.rs  collider.rs  item_box.rs  offroad.rs  track.rs
editor/static/: index.html
game/: Cargo.toml
game/src/: engine.rs  game.rs  lib.rs
game/src/engine/: cache.rs  cam.rs  mesh.rs  object.rs  shaders.rs  sprite.rs  ui.rs
game/src/engine/shaders/skybox/: frag.glsl  mod.rs  vert.glsl
game/src/engine/shaders/unlit/: frag.glsl  mod.rs  vert.glsl
game/src/engine/sprite/: billboard.rs  sheet.rs  skybox.rs  ui.rs
game/src/game/: assets.rs  map.rs  objects.rs  state.rs
game/src/game/objects/: coin.rs  item.rs  item_box.rs  map.rs  player.rs
game/static/: index.html
maps/donut_plains_1/: donut_plains_1.smk
maps/donut_plains_3/: donut_plains_3.smk
maps/mario_circuit_1/: mario_circuit_1.smk
maps/mario_circuit_3/: mario_circuit_3.smk
maps/mcircuit/: mcircuit.smk  mcircuit_old.smk
src/: client.rs  main.rs  server.rs
src/server/: client.rs  client_handler.rs  game_state.rs
