[package]
name = "super-mimi-kart"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["ws"] }
tower-http = { version = "0.5", features = ["fs", "compression-gzip", "compression-br", "compression-deflate", "compression-zstd"] }
tokio = { version = "1", features = ["full"] }
log = "0.4.25"
colog = "1.3.0"

common = { path = "common" }
ws_stream_wasm = "0.7.4"
futures = "0.3.31"
rand = "0.8.5"

[workspace]
resolver = "2"
members = ["common"]
exclude = ["game", "editor"]

