[package]
name = "client"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
glow = "0.16.0"
console_error_panic_hook = "0.1.7"
wasm-bindgen = { version = "0.2" }
include_dir = "0.7.4"
bytemuck = { version = "1.20.0", features = ["derive"] }

[dependencies.web-sys]
version = "0.3" 
features=[
  "HtmlCanvasElement", 
  "WebGl2RenderingContext", 
  "Window",
  "WebSocket",
  "Location"
]

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1
incremental = false
debug = false
