[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
glam = { version = "0.29", features = ["serde"] }
rmp-serde = "1.3.0"
serde = { version = "1.0", default-features = false, features = ["derive", "std"] }
tar = "0.4.43"

[dependencies.image]
version = "0.25"
default-features = false
features = [
    "png"
]
