[package]
name = "editor"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
egui = "0.30"
eframe = { version = "0.30", default-features = false, features = ["glow"] }
wasm-bindgen = { version = "0.2" }
common = { path = "../common" }
log = "0.4.22"
wasm-bindgen-futures = "0.4.49"
egui_extras = { version = "0.30", features = ["http", "image"] }
egui-phosphor = { version = "0.8.0", default-features = false, features = ["bold"] }
enumflags2 = "0.7.10"
js-sys = "0.3.77"
poll-promise = { version = "0.3.0", features = ["web"] }
indexed_db_futures = { version = "0.6.0", features = ["serde", "async-upgrade"] }
serde = { version = "1.0", default-features = false, features = ["derive", "std"] }
earcut = "0.4.2"

[dependencies.web-sys]
version = "0.3" 
features = [
    "Window",
    "Document",
    "Location",
    "Blob",
    "BlobPropertyBag",
    "Navigator",
    "Url",
    "Element",
    "HtmlElement",
    "FileReader"
]

[dependencies.image]
version = "0.25"
default-features = false
features = [
    "png"
]

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1
incremental = false
debug = false
