[package]
name = "game"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
glow = "0.16"
console_error_panic_hook = "0.1"
wasm-bindgen = { version = "0.2" }
include_dir = "0.7"
bytemuck = { version = "1.20", features = ["derive"] }
common = { path = "../common" }

[dependencies.web-sys]
version = "0.3" 
features = [
    "Document",
    "Window",
    "Location",
    "HtmlCanvasElement", 

    "Performance",
    "Event",
    "KeyboardEvent",

    "WebSocket",
    "WebGl2RenderingContext", 
]

[dependencies.image]
version = "0.25"
default-features = false
features = [
    "png"
]

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1
incremental = false
debug = false
