[package]
name = "game"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
glow = "0.16"
console_error_panic_hook = "0.1"
wasm-bindgen = { version = "0.2" }
include_dir = "0.7"
bytemuck = { version = "1.20", features = ["derive"] }
common = { path = "../common" }
poll-promise = { version = "0.3.0", features = ["web"] }
wasm-bindgen-futures = "0.4.50"
js-sys = "0.3.77"
console_log = "1.0.0"
log = "0.4.25"
nalgebra = "0.33.2"
parry2d = "0.18.0"
rand = { version = "0.9.0", features = ["small_rng"], default-features = false }
gltf = { version =  "1.4.1", features = ["utils"], default-features = false }
# bdf-reader = "0.1.2"

[dependencies.web-sys]
version = "0.3" 
features = [
    "Document",
    "Window",
    "Location",
    "HtmlCanvasElement", 

    "Performance",
    "Event",
    "KeyboardEvent",

    "Request",
    "RequestInit",
    "RequestMode",
    "Response",

    "WebSocket",
    "BinaryType",
    "MessageEvent",
    "ErrorEvent",

    "WebGl2RenderingContext", 
    "WebGlContextAttributes"
]

[dependencies.image]
version = "0.25"
default-features = false
features = [
    "png"
]

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1
incremental = false
debug = false
